--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.release>17</maven.compiler.release>
-        <exec.mainClass>com.mycompany.laboratorioapp.LaboratorioApp</exec.mainClass>
+        <exec.mainClass>com.mycompany.laboratorioapp.LaboratorioAplicacion</exec.mainClass>
     </properties>
     <dependencies>
         <dependency>
